# kai

./: CMakeLists.txt  Makefile  kai.c
.github/workflows/: cmake-multi-platform.yml
